@@ -1,4 +1,10 @@
-2011-02-14  Wolfgang Lux  <wlux@uni-muenster.de>
+2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Modules/Volumes/Volumes.m (-mtypeMatrixAction:,
+	-mpointButtAction:, -controlTextDidChange:): Improve UI validation
+	of the buttons in the Volumes system preferences panel.
+
+2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Modules/Defaults/Defaults.m (-mainViewDidLoad): Disable
 	editing for the description string.
